Fix vertical alignment of Sass/SCSS icon in sidebar

--- a/styles/icons.less
+++ b/styles/icons.less
@@ -103,7 +103,7 @@
 .meteor-icon        { .devicons; content: "\e6a5"; font-size: x-large; left: -2px; }
 .rails-icon         { .devicons; content: "\e63b"; }
 .rust-icon          { .devicons; content: "\e6a8"; font-size: 22px; line-height: .7; top: 5px; margin-right: 5px; left: -1px; }
-.sass-icon          { .devicons; content: "\e64b"; top: 0; }
+.sass-icon          { .devicons; content: "\e64b"; }
 .swift-icon         { .devicons; content: "\e655"; font-size: large; }
 .travis-icon        { .devicons; content: "\e67e"; font-size: medium; }
 .windows-icon       { .devicons; content: "\e60f"; }
